--- a/code/index.html
+++ b/code/index.html
@@ -8,8 +8,7 @@
 	
 	<h1 id=h1></h1>
 	
-	<script src="home.js"></script>
-	<script src="random examples.js"></script>
+	<script src="home.js"></script>>
 
 </body>
 </html>
