--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
 	
 	<h1 id=h1></h1>
 	
-	<script src="home.js"></script>>
-
+	<script src="notes&testing.js"></script>
+	<script src="can i ask you a question.js"></script>
 </body>
 </html>
